<resources>
    <string name="app_name">PriceTrend</string>

    <!-- Home Fragment    -->
    <string name="home">Home</string>
    <string name="you_have_saved">You have saved</string>
    <string name="rp_xxx">Rp xxx.xxx</string>
    <string name="your_tracking">Your Tracking</string>
    <string name="see_all">See All</string>
    <string name="in">in</string>
    <string name="transactions">transactions</string>

    <!-- Tracking Fragment   -->
    <string name="tracking">Tracking</string>
    <string name="tracked_since">Tracked Since: </string>
    <string name="image_desc">Image Description</string>
    <string name="title_home">Home</string>
    <string name="title_tracking">Tracking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user001">User001</string>
    <string name="lifetime_savings">Lifetime Savings</string>
    <string name="default_saving_value">Rp 325.000</string>
    <string name="default_trx_count">23</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="your_search_result_will_be_shown_here">Your search result will be shown here</string>
    <string name="hot_products">Hot Products</string>
    <string name="xx">xx</string>
    <string name="profile_picture_of_the_user">Profile picture of the user</string>
    <string name="log_out">Log Out</string>
    <string name="shop">Shop</string>
    <string name="area">Area</string>
    <string name="sold_format">Sold: %d</string>
    <string name="review_format">Review Score: %1$d (%2$d)</string>
    <string name="tracked_since_format">Tracked Since: %s</string>
    <string name="last_updated_format">Last Updated: %s</string>
    <string name="choose_data">Choose Data:</string>
    <string name="add_to_my_tracking">Add to My Tracking</string>
    <string name="tokped">tokped</string>
    <string name="go_to_tracking">Go to Tracking</string>
    <string name="history">History</string>
    <string name="timestamp">Timestamp</string>
    <string name="sold">Sold</string>
    <string name="stock">Stock</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="price">Price</string>
    <string name="seen">Seen</string>
    <string name="review_count">Review Count</string>
    <string name="review_score">Review Score</string>
    <string name="long_text">A very long URL will be displayed right here on this very screen right here on this very screen right here on this very screen</string>
    <string name="status">Status</string>
    <string name="request_stat_0">Processing</string>
    <string name="request_stat_200">Created</string>
    <string name="request_stat_302">Existed</string>
    <string name="request_stat_404">Not Found</string>
    <string name="request_desc_0">Your request is still in queue. Please wait a few more minutes.</string>
    <string name="request_desc_200">Your requested listing has not been tracked in our system before. We will start tracking it from now. Thank you for your submission</string>
    <string name="request_desc_302">We found your requested listing in our system. Your tracking has been made!</string>
    <string name="request_desc_404">Your requested listing cannot be found. Please try again in a few moment. If problem persist, please contact us.</string>
    <string name="request_stat_error">-</string>
    <string name="request_desc_error">Unknown Request StatusCode found!!!</string>
    <string name="request">Request</string>

</resources>