<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.buzzdynegamingteam.pricetrend.profile.ProfileViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ProfileFragment"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/profile_picture_of_the_user"

                android:layout_marginTop="20dp"

                android:src="@drawable/avatar_rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/user001"

                android:textColor="@android:color/primary_text_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_profile_picture" />

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/lifetime_savings"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_username" />

            <TextView
                android:id="@+id/text_saving_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/default_saving_value"
                android:textColor="@android:color/primary_text_light"

                app:layout_constraintEnd_toStartOf="@+id/textview2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview1" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"

                android:text="@string/in"
                app:layout_constraintEnd_toStartOf="@+id/text_trx_count"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/text_saving_sum"
                app:layout_constraintTop_toTopOf="@id/text_saving_sum" />

            <TextView
                android:id="@+id/text_trx_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"
                android:text="@string/default_trx_count"

                android:textColor="@android:color/primary_text_light"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/textview2"
                app:layout_constraintTop_toTopOf="@id/text_saving_sum" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"

                android:text="@string/transactions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/text_trx_count"
                app:layout_constraintTop_toTopOf="@id/text_saving_sum" />

            <LinearLayout
                android:id="@+id/options_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"

                android:layout_marginHorizontal="24dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_saving_sum"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>