<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"

            android:background="@color/purple_200"
            >

            <ImageView
                android:id="@+id/image_listing"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:contentDescription="@string/image_desc"

                android:scaleType="centerCrop"
                android:src="@drawable/camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_listing_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="2"

                android:text="Casing PC Cooler Master MasterBox Q300L Casing PC Cooler Q300L Casing PC Cooler "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_listing"
                app:layout_constraintTop_toTopOf="@+id/image_listing" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Started at:"
                android:textSize="10sp"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toTopOf="@id/textView6"
                app:layout_constraintStart_toStartOf="@id/textView6"
                />

            <TextView
                android:id="@+id/text_start_ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="28 Jun 2020"
                android:textSize="10sp"
                android:textStyle="bold"

                android:includeFontPadding="false"
                android:layout_marginStart="2dp"

                app:layout_constraintTop_toTopOf="@id/textView7"
                app:layout_constraintStart_toEndOf="@id/textView7"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:text="Finished at:"
                android:textSize="10sp"
                android:includeFontPadding="false"

                app:layout_constraintBottom_toBottomOf="@+id/image_listing"
                app:layout_constraintStart_toEndOf="@+id/image_listing" />

            <TextView
                android:id="@+id/text_finish_ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="28 Jun 2020"
                android:textSize="10sp"
                android:textStyle="bold"

                android:includeFontPadding="false"
                android:layout_marginStart="2dp"

                app:layout_constraintBottom_toBottomOf="@+id/image_listing"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:id="@+id/text_price_diff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="-Rp50.000 (5%)"
                android:textColor="@color/price_red"
                android:textSize="14sp"
                android:includeFontPadding="false"

                app:layout_constraintBottom_toBottomOf="@+id/image_listing"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Rp 499.000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:includeFontPadding="false"

                app:layout_constraintBottom_toTopOf="@+id/text_price_diff"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            >

            <TableLayout
                android:id="@+id/table_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:stretchColumns="1,2"

                android:layout_marginHorizontal="4dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TableRow>
                    <TextView
                        android:text=""/>
                    <TextView
                        android:text="@string/start"
                        android:gravity="center"
                        />
                    <TextView
                        android:text="@string/end"
                        android:gravity="center"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/timestamp"/>
                    <TextView
                        android:id="@+id/table_start_ts"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_ts"
                        style="@style/SavingTableItem"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/price"/>
                    <TextView
                        android:id="@+id/table_start_price"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_price"
                        style="@style/SavingTableItem"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/sold"
                        />
                    <TextView
                        android:id="@+id/table_start_sold"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_sold"
                        style="@style/SavingTableItem"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/seen"/>
                    <TextView
                        android:id="@+id/table_start_seen"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_seen"
                        style="@style/SavingTableItem"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/stock"/>
                    <TextView
                        android:id="@+id/table_start_stock"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_stock"
                        style="@style/SavingTableItem"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/review_count"/>
                    <TextView
                        android:id="@+id/table_start_review_count"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_review_count"
                        style="@style/SavingTableItem"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/review_score"/>
                    <TextView
                        android:id="@+id/table_start_review_score"
                        style="@style/SavingTableItem"/>
                    <TextView
                        android:id="@+id/table_end_review_score"
                        style="@style/SavingTableItem"/>
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btn_tokopedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tokped"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/table_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>