<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.buzzdynegamingteam.pricetrend.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/you_have_saved"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_saving_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.getTotalSaving}"
                android:textSize="30sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/home_trxcount_textview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_saving_textview" />

            <TextView
                android:id="@+id/home_trxcount_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{viewmodel.getTrxCount}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/home_trxcount_textview"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"

                style="@style/DefaultContainer">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/your_tracking"
                    style="@style/CardHeading" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracking_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    tools:listitem="@layout/home_list_item"
                    tools:orientation="horizontal" />

                <Button
                    android:id="@+id/button_your_tracking_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/DefaultContainer"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/linearLayout1">


                <TextView
                    android:id="@+id/textView4"
                    style="@style/CardHeading"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:text="@string/hot_products" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hot_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"

                    tools:listitem="@layout/home_list_item" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

